# guard-core-rs

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  Makefile  README.md  SECURITY.md  clippy.toml  compose.yml  deny.toml  rustfmt.toml
.github/: labeler.yml  labels.yml
.github/workflows/: ci.yml  fuzz.yml  greetings.yml  stale.yml  summary.yml
benches/: checks.rs  detection_engine.rs  rate_limit.rs  suspatterns.rs
crates/guard-core/: Cargo.toml
crates/guard-core-benchmark/: Cargo.toml
crates/guard-core-benchmark/benches/: compiler.rs  detection_engine.rs  preprocessor.rs  semantic.rs
crates/guard-core-benchmark/src/: lib.rs
crates/guard-core-engine/: Cargo.toml
crates/guard-core-engine/src/: compiler.rs  lib.rs  preprocessor.rs  util.rs
crates/guard-core-engine/src/semantic/: keywords.rs  mod.rs  patterns.rs
crates/guard-core-python/: Cargo.toml
crates/guard-core-python/src/: lib.rs
crates/guard-core-rs/: Cargo.toml
crates/guard-core-rs/src/: lib.rs
crates/guard-core/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  checks.md  configuration.md  decorators.md  detection_engine.md  development.md  getting_started.md  handlers.md  introduction.md  testing.md
examples/: custom_check.rs  pattern_detection.rs  quickstart.rs  with_decorator.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_preprocess.rs  fuzz_semantic.rs
scripts/benches/: BENCHMARKS.md  bench.py  bench_results.json  requirements.txt
src/: error.rs  lib.rs  models.rs  utils.rs
src/core/: mod.rs
src/core/behavioral/: context.rs  mod.rs  processor.rs
src/core/bypass/: context.rs  handler.rs  mod.rs
src/core/checks/: base.rs  helpers.rs  mod.rs  pipeline.rs
src/core/checks/implementations/: authentication.rs  cloud_ip_refresh.rs  cloud_provider.rs  custom_request.rs  custom_validators.rs  emergency_mode.rs  https_enforcement.rs  ip_security.rs  mod.rs  rate_limit.rs  referrer.rs  request_logging.rs  request_size_content.rs  required_headers.rs  route_config.rs  suspicious_activity.rs  time_window.rs  user_agent.rs
src/core/events/: metrics.rs  middleware_events.rs  mod.rs
src/core/initialization/: handler_initializer.rs  mod.rs
src/core/responses/: context.rs  factory.rs  mod.rs
src/core/routing/: context.rs  mod.rs  resolver.rs
src/core/validation/: context.rs  mod.rs  validator.rs
src/decorators/: base.rs  mod.rs
src/detection_engine/: compiler.rs  mod.rs  monitor.rs  preprocessor.rs  semantic.rs
src/handlers/: behavior.rs  cloud.rs  dynamic_rule.rs  ipban.rs  ipinfo.rs  mod.rs  ratelimit.rs  redis.rs  security_headers.rs  suspatterns.rs
src/protocols/: agent.rs  geo_ip.rs  middleware.rs  mod.rs  redis.rs  request.rs  response.rs
src/scripts/: mod.rs  rate_lua.rs
tests/: test_behavior.rs  test_check_authentication.rs  test_check_cloud_ip_refresh.rs  test_check_cloud_provider.rs  test_check_custom_request.rs  test_check_custom_validators.rs  test_check_emergency_mode.rs  test_check_https_enforcement.rs  test_check_ip_security.rs  test_check_rate_limit.rs  test_check_referrer.rs  test_check_request_logging.rs  test_check_request_size_content.rs  test_check_required_headers.rs  test_check_route_config.rs  test_check_suspicious_activity.rs  test_check_time_window.rs  test_check_user_agent.rs  test_checks.rs  test_checks_accessors.rs  test_checks_base.rs  test_checks_helpers.rs  test_checks_pipeline.rs  test_cloud.rs  test_core_behavioral.rs  test_core_bypass.rs  test_core_events.rs  test_core_initialization.rs  test_core_responses.rs  test_core_routing.rs  test_core_validation.rs  test_decorators.rs  test_detection_engine.rs  test_dynamic_rule.rs  test_error.rs  test_handlers.rs  test_ipban.rs  test_ipinfo.rs  test_models.rs  test_preprocessor.rs  (+8 more)
tests/support/: agent.rs  geo_ip.rs  middleware.rs  mock_agent.rs  mock_redis.rs  redis.rs  request.rs  response.rs
