[workspace]
members = ["crates/*"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
authors = [
    "Renzo Franceschini <rennf93@users.noreply.github.com>",
    "MihaiStreames <72852703+MihaiStreames@users.noreply.github.com>",
]
categories = ["web-programming"]
documentation = "https://docs.rs/guard-core"
edition = "2024"
homepage = "https://github.com/rennf93/guard-core-rs"
keywords = ["security", "middleware", "api", "detection-engine", "waf"]
license = "MIT"
repository = "https://github.com/rennf93/guard-core-rs"
rust-version = "1.92"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
guard-core = { path = "crates/guard-core" }
guard-core-engine = { path = "crates/guard-core-engine" }

criterion = { version = "0.8.2", default-features = false }
htmlescape = "0.3.1"
lru = "0.17.0"
percent-encoding = "2.3.2"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
regex = "1.12.3"
unicode-normalization = "0.1.25"
