[package]
name = "guard-core-rs"
version = "0.0.1"
authors = { workspace = true }
categories = { workspace = true }
description = "Framework-agnostic security engine for the Guard ecosystem."
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
guard-core-engine = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
